# astral

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: agent-pipeline.yml  build-core.yml  build-node.yml  build-python.yml  publish-node.yml  publish-python.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: aggregator.rs  batch_builder.rs  chunker.rs  lib.rs  parser.rs  walker.rs
crates/core/src/agent/: mod.rs  orchestrator.rs  pipeline.rs  state.rs  task.rs
crates/core/src/outputs/: csv_output.rs  html.rs  json.rs  jsonl.rs  markdown.rs  mod.rs  sarif.rs  vector.rs
crates/core/tests/: integration_test.rs
crates/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
crates/node/src/: lib.rs
crates/node/src/ts/: cli.ts  mcp-server.ts
crates/node/src/ts/agent/: runtime.ts
crates/node/src/ts/agent/agents/: index.ts
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/src/: lib.rs
crates/python/src/py/: __init__.py  cli.py
crates/python/src/py/agent/: __init__.py  runtime.py
crates/python/src/py/agent/agents/: __init__.py
schema/: analysis-result.schema.json  batch-request.schema.json  config.schema.json
tests/fixtures/sample-php/src/: Calculator.php
tests/fixtures/sample-python/src/: calculator.py
tests/fixtures/sample-ts/src/: greeter.ts  logger.ts
