[package]
name = "astral-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Analyse any codebase with Claude — at scale, at 50% cost"

[[bin]]
name = "astral"
path = "src/main.rs"

[dependencies]
astral-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
indicatif = "0.17"
console = "0.15"
