[package]
name = "astral-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for astral — codebase analysis via Claude Batch API"

[dependencies]
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-php = "0.23"
ignore = "0.4"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
tera = "1"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
csv = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
