[package]
name = "astral-python"
version.workspace = true
edition = "2021" # pinned until PyO3 supports 2024 edition
license.workspace = true

[lib]
name = "astral"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
astral-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
