[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "astral-code"
version = "0.1.2"
description = "Analyse any codebase with Claude — at scale, at 50% cost"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
astral = "py.cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
