[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "astral-code"
version = "0.1.3"
description = "Analyse any codebase with Claude — at scale, at 50% cost"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Azharuddin Khan" }]
requires-python = ">=3.9"
keywords = ["claude", "anthropic", "batch-api", "code-analysis", "tree-sitter", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/azharuddinkhan3005/astral"
Repository = "https://github.com/azharuddinkhan3005/astral"
Issues = "https://github.com/azharuddinkhan3005/astral/issues"

[project.scripts]
astral = "py.cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
